[gd_scene load_steps=2 format=3 uid="uid://home_screen123"]

[ext_resource type="Script" path="res://scripts/home_screen.gd" id="1_home"]

[node name="HomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_home")

[node name="Sky" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -650.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.529, 0.808, 0.922, 1)

[node name="Water" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 630.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.5, 0.7, 1)

[node name="WaterSurface" type="ColorRect" parent="."]
layout_mode = 1
offset_top = 620.0
offset_right = 720.0
offset_bottom = 640.0
color = Color(0.3, 0.6, 0.85, 1)

[node name="FishContainer" type="Node2D" parent="."]

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 150.0
offset_right = 300.0
offset_bottom = 280.0
grow_horizontal = 2
pivot_offset = Vector2(300, 65)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.4, 0.6, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 64
text = "FISH
CATCHER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 300.0
offset_right = 200.0
offset_bottom = 340.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "Catch them all!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = 400.0
offset_right = 140.0
offset_bottom = 580.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="SinglePlayerButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "PLAY"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.5)
theme_override_font_sizes/font_size = 14
text = "v1.1.0"
horizontal_alignment = 1
